20071129 initial revision.
20071129 configure.in: fix AC_INIT call.
20071129 dir.c,file.c,libgdos.h: add getentnum() and extend ftypeinfo.
20071130 dll.c: remove executable bit.
20071201 dir.c,libgdos.h: rename 'sab' member to 'secmap'.

$Id$