@@ -3,5 +3,7 @@
 20071129 dir.c,file.c,libgdos.h: add getentnum() and extend ftypeinfo.
 20071130 dll.c: remove executable bit.
 20071201 dir.c,libgdos.h: rename 'sab' member to 'secmap'.
+20071201 dir.c,image.c,internals.h,libgdos.h: add support for Beta DOS and
+	 Master DOS extended directories.
 
 $Id$
